# Group1-TruckCarla-eCAL

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml  run_simulator.py
ecal/: ecal5-5.10.3-cp37-cp37m-win_amd64.whl
ecal_carla/: Serial_Throttle_Publisher.py  __init__.py  main.py
ecal_carla/datatypes/Carla/: Carla.proto  Crashed.proto  LineCrossed.proto
ecal_carla/datatypes_python/Carla/: Crashed_pb2.py  LineCrossed_pb2.py
